Bug 427201 - Package won't update
Summary: Package won't update
Status: RESOLVED FIXED
Alias: None
Product: frameworks-knewstuff
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-01 11:31 UTC by Aleix Pol
Modified: 2020-10-01 13:56 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.75
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aleix Pol 2020-10-01 11:31:46 UTC
I keep getting the output below (which maybe should be promoted to a warning?) and the state never seems to change. I have it permanently set as updateable in Discover.

KNSCore::Installation::installDownloadedFileAndUncompress(const KNSCore::EntryInternal&, const QString&, QString)::<lambda Install job finished telling us this item was already installed with this version, so... let's just make a small fib and say we totally installed that, honest, and we now have files "/home/apol/.local/share/plasma/wallpapers/online.knowmad.shaderwallpaper"
Comment 1 Bug Janitor Service 2020-10-01 11:35:33 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/knewstuff/-/merge_requests/61
Comment 2 Dan Leinir Turthra Jensen 2020-10-01 11:40:51 UTC
Git commit ad9212d983041e200bd2c4f0539cca6c364c9f71 by Dan Leinir Turthra Jensen.
Committed on 01/10/2020 at 11:33.
Pushed by leinir into branch 'master'.

Update versions for "fake" kpackage updates

We will occasionally be asked to update a kpackage which is not, in fact,
an update. This would result in the package not getting the new version
and release date set, which in turn would result in the package being
reported as updateable again on next updates check.

M  +8    -1    src/core/installation.cpp

https://invent.kde.org/frameworks/knewstuff/commit/ad9212d983041e200bd2c4f0539cca6c364c9f71