Update versions for "fake" kpackage updates

We will occasionally be asked to update a kpackage which is not, in fact,
an update. This would result in the package not getting the new version
and release date set, which in turn would result in the package being
reported as updateable again on next updates check.

BUG:427201